--- a/.gitattributes
+++ b/.gitattributes
@@ -3,8 +3,8 @@
 /.editorconfig export-ignore
 /.gitattributes export-ignore
 /.gitignore export-ignore
-/phpunit.xml export-ignore
-/CHANGELOG-* export-ignore
+/phpunit.xml.dist export-ignore
+/CHANGELOG.md export-ignore
 /CONTRIBUTING.md export-ignore
 /CODE_OF_CONDUCT.md export-ignore
 /social.jpg export-ignore
